// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots infinite-list/List basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
      >
        <div
          className="MuiPaper-root-98 MuiPaper-elevation2-102 MuiPaper-rounded-99"
        >
          <div
            className="MuiList-root-125 MuiList-padding-126"
          >
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-129 MuiGrid-spacing-xs-24-153"
    >
      <div
        className="MuiGrid-item-130 MuiGrid-grid-xs-12-169"
      >
        <div
          className="MuiPaper-root-226 MuiPaper-elevation2-230 MuiPaper-rounded-227"
        >
          <div
            className="MuiTable-root-253"
          >
            <div
              className="MuiTableHead-root-255 Component-root-254"
            >
              <div
                className="MuiTableRow-root-261 Component-root-256 MuiTableRow-head-264 Component-head-259"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-274 InnerTableCell-root-266 MuiTableCell-head-275 InnerTableCell-head-267"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-274 InnerTableCell-root-266 MuiTableCell-head-275 InnerTableCell-head-267"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-274 InnerTableCell-root-266 MuiTableCell-head-275 InnerTableCell-head-267"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-282"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table order 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-283 MuiGrid-spacing-xs-24-307"
    >
      <div
        className="MuiGrid-item-284 MuiGrid-grid-xs-12-323"
      >
        <div
          className="MuiPaper-root-380 MuiPaper-elevation2-384 MuiPaper-rounded-381"
        >
          <div
            className="MuiTable-root-407"
          >
            <div
              className="MuiTableHead-root-409 Component-root-408"
            >
              <div
                className="MuiTableRow-root-415 Component-root-410 MuiTableRow-head-418 Component-head-413"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-428 InnerTableCell-root-420 MuiTableCell-head-429 InnerTableCell-head-421"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-428 InnerTableCell-root-420 MuiTableCell-head-429 InnerTableCell-head-421"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root-448 MuiTableSortLabel-root-443"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Title"
                  >
                    Title
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-451 MuiTableSortLabel-icon-445 MuiTableSortLabel-iconDirectionAsc-447"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-428 InnerTableCell-root-420 MuiTableCell-head-429 InnerTableCell-head-421"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root-448 MuiTableSortLabel-root-443"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Timestamp"
                  >
                    Timestamp
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-451 MuiTableSortLabel-icon-445 MuiTableSortLabel-iconDirectionAsc-447"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <span
            className="MuiTypography-root-458 MuiTypography-caption-468"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            - tip: use [shift + click] to sort by multiple fields
          </span>
          <aside
            className="MuiTypography-root-458 MuiTypography-body2-466 MuiTypography-gutterBottom-475"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </aside>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table search 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-482 MuiGrid-spacing-xs-24-506"
    >
      <div
        className="MuiGrid-item-483 MuiGrid-grid-xs-12-522"
      >
        <div
          className="MuiPaper-root-579 MuiPaper-elevation2-583 MuiPaper-rounded-580"
        >
          <div
            className="MuiTable-root-606"
          >
            <div
              className="MuiTableHead-root-608 Component-root-607"
            >
              <div
                className="MuiTableRow-root-614 Component-root-609 MuiTableRow-head-617 Component-head-612"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
              <div
                className="MuiTableRow-root-614 Component-root-609 MuiTableRow-head-617 Component-head-612"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                />
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                >
                  <div
                    className="MuiInput-root-635 MuiInput-fullWidth-642 MuiInput-underline-639"
                  >
                    <input
                      className="MuiInput-input-643"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-627 InnerTableCell-root-619 MuiTableCell-head-628 InnerTableCell-head-620"
                  scope="col"
                >
                  <div
                    className="MuiInput-root-635 MuiInput-fullWidth-642 MuiInput-underline-639"
                  >
                    <input
                      className="MuiInput-input-643"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <aside
            className="MuiTypography-root-648 MuiTypography-body2-656 MuiTypography-gutterBottom-665"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </aside>
        </div>
      </div>
    </div>
  </div>
</div>
`;
